--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+"prestart":"npm install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
